# e-commerce-analytics-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
airflow-docker/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow-docker/config/: airflow.cfg
airflow-docker/dags/: customer_analytics_pipeline.py
airflow-docker/scripts/: load_olist_to_databricks.py  load_olist_to_postgres.py
dbt_project/: README.md  dbt_project.yml  profiles.example.yml
dbt_project/models/gold/: _gold.yml  revenue_by_month.sql  top_customers.sql  top_products.sql
dbt_project/models/staging/: _sources.yml  _staging.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_reviews.sql
